--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -359,6 +359,10 @@
       <artifactId>jersey-multipart</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-spring</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.sun.xml.stream</groupId>
       <artifactId>sjsxp</artifactId>
       <version>1.0.1</version>
