--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
     <axiom.version>1.2.10</axiom.version>
     <cxf.version>2.4.0</cxf.version>
     <derby.version>10.7.1.1</derby.version>
-    <jersey.version>1.0.3.1</jersey.version>
+    <jersey.version>1.8</jersey.version>
     <spring.version>3.0.5.RELEASE</spring.version>
     <trippi.version>1.5.5</trippi.version>
   </properties>
@@ -142,6 +142,23 @@
         <groupId>com.sun.jersey.contribs</groupId>
         <artifactId>jersey-multipart</artifactId>
         <version>${jersey.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.jersey.contribs</groupId>
+        <artifactId>jersey-spring</artifactId>
+        <version>${jersey.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>commons-httpclient</groupId>
