--- a/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
     <init-param>
       <param-name>static-resources-list</param-name>
-      <param-value>/(images|ri)/.*</param-value>
+      <param-value>/(images|ri)/.* index.html</param-value>
     </init-param>
     <load-on-startup>3</load-on-startup>
   </servlet>
