seperate jaxrs servlets to allow custom error pages by removing fall-through mapping to CXF

--- a/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
@@ -24,9 +24,35 @@
     <display-name>CXF Servlet</display-name>
     <servlet-name>CXFServlet</servlet-name>
     <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+  <servlet>
+    <display-name>CXF Upload Servlet</display-name>
+    <servlet-name>CXFUploadServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
     <init-param>
-      <param-name>static-resources-list</param-name>
-      <param-value>/(images|ri)/.* index.html</param-value>
+      <param-name>config-location</param-name>
+      <param-value>file:${fedora.home}/server/config/spring/web/jaxrs/upload-jaxrs.xml</param-value>
+    </init-param>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+  <servlet>
+    <display-name>CXF Objects Servlet</display-name>
+    <servlet-name>CXFObjectsServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+    <init-param>
+      <param-name>config-location</param-name>
+      <param-value>file:${fedora.home}/server/config/spring/web/jaxrs/objects-jaxrs.xml</param-value>
+    </init-param>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+  <servlet>
+    <display-name>CXF Describe Servlet</display-name>
+    <servlet-name>CXFDescribeServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+    <init-param>
+      <param-name>config-location</param-name>
+      <param-value>file:${fedora.home}/server/config/spring/web/jaxrs/describe-jaxrs.xml</param-value>
     </init-param>
     <load-on-startup>3</load-on-startup>
   </servlet>
@@ -114,32 +140,6 @@
     <servlet-name>WSDLServlet</servlet-name>
     <servlet-class>org.fcrepo.server.access.WSDLServlet</servlet-class>
   </servlet>
-  <servlet>
-    <display-name>Fedora REST API Servlet</display-name>
-    <servlet-name>RestServlet</servlet-name>
-    <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
-    <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>org.fcrepo.server.rest</param-value>
-    </init-param>
-    <init-param>
-      <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
-    </init-param>
-  </servlet>
-  <servlet>
-    <display-name>Fedora REST API Upload Servlet</display-name>
-    <servlet-name>UploadRestServlet</servlet-name>
-    <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
-    <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>org.fcrepo.server.upload</param-value>
-    </init-param>
-    <init-param>
-      <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
-    </init-param>
-  </servlet>
   <servlet-mapping>
     <servlet-name>CXFServlet</servlet-name>
     <url-pattern>/services/*</url-pattern>
@@ -193,23 +193,6 @@
     <servlet-name>OAIProviderServlet</servlet-name>
     <url-pattern>/oai</url-pattern>
   </servlet-mapping>
-<!--   <servlet-mapping>
-    <servlet-name>RestServlet</servlet-name>
-    <url-pattern>/objects/*</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>UploadRestServlet</servlet-name>
-    <url-pattern>/upload</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>RestServlet</servlet-name>
-    <url-pattern>/objects/nextPID</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>RestServlet</servlet-name>
-    <url-pattern>/objects/nextPID.xml</url-pattern>
-  </servlet-mapping>
- -->
    <servlet-mapping>
     <servlet-name>RISearchServlet</servlet-name>
     <url-pattern>/risearch</url-pattern>
@@ -226,11 +209,17 @@
     <servlet-name>UserServlet</servlet-name>
     <url-pattern>/user</url-pattern>
   </servlet-mapping>
-  <!-- fall through to REST Servlet: what about index?
-   Convert describe servlet to resource, map to two paths -->
   <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <servlet-name>CXFUploadServlet</servlet-name>
+    <url-pattern>/upload</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CXFDescribeServlet</servlet-name>
+    <url-pattern>/describe</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CXFObjectsServlet</servlet-name>
+    <url-pattern>/objects/*</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>RestApiFlashFilter</filter-name>
