--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -341,6 +341,7 @@
                 <include>**/ContentModelDSInputTest.class</include>
                 <include>**/TestAdminAPI.class</include>
                 <include>**/TestObjectLastModDate.class</include>
+                <include>**/TestExampleWithMediashelfClient</include>
                  <!-- Disabled until FCREPO-798 is public <include>**/TestAPIM2.class</include> -->
 
               </includes>
