--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -105,5 +105,10 @@
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+    	<groupId>com.yourmediashelf.fedora.client</groupId>
+    	<artifactId>fedora-client-core</artifactId>
+    	<version>0.3</version>
+    </dependency>
   </dependencies>
 </project>
