external datastreams test pass A&C

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -158,6 +158,9 @@
                       antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
                       target="clearSQL" inheritrefs="true" />
                     <ant
+                      antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
+                      target="configureFedora" inheritrefs="true" />
+                    <ant
                       antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
                       target="tomcat-start" inheritrefs="true" />
                   </target>
@@ -260,7 +263,7 @@
                   <type>jar</type>
                   <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/</outputDirectory>
-                  <includes>**/scripts/*.xml</includes>
+                  <includes>**/scripts/*.xml,**/test-policies/*.xml,**/fesl-test-policies/*.xml</includes>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -323,6 +326,7 @@
                 <include>**/TestAPIA.class</include>
                 <include>**/TestAPIALite.class</include>
                 <include>**/TestAPIM.class</include>
+                <include>**/TestExternalDatastreams.class</include>
                 <include>**/TestRelationships.class</include>
                 <include>**/TestAPIMLite.class</include>
                 <include>**/TestAuthentication.class</include>
