FCREPO-893: Adding new 'upstream authN' filter, deprecating legacy authN filters

--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -42,6 +42,16 @@ Require user authentication for Fedora's access (API-A) interface?
 apia.auth.required.defaultValue = false
 apia.auth.required.validValues = true false
 
+upstream.auth.enabled.label = Use upstream HTTP authentication (Experimental Feature)
+upstream.auth.enabled.description = \
+You may wish to rely on a local SSO or other external source for HTTP authentication and subject attributes. \n\
+WARNING: This is an experimental feature and should be enabled only with the understanding \n\
+that integration with external authentication will require further configuration \n\
+and that this is not yet a stable Fedora feature. We invite you to try it out and give us feedback.  \n\
+Use upstream authentication?
+upstream.auth.enabled.defaultValue = false
+upstream.auth.enabled.validValues = true false
+
 ssl.available.label = SSL availability
 ssl.available.description = \
 Should Fedora be available via SSL?  Note: this does not preclude   \n\
