FCREPO-1095: Update libraries for 3.6 release
activemq          (5.5.0         -> 5.6.0)
commons-beanutils (1.6           -> 1.8.3)
commons-codec      (1.5           -> 1.6)
cxf                (2.4.0         -> 2.6.1)
derby              (10.7.1.1      -> 10.8.2.2)
jackson-mapper     (1.5.8         -> 1.9.7)
logback-classic    (0.9.18        -> 1.0.6)
slf4j              (1.5.11        -> 1.6.6)
trippi             (1.5.5         -> 1.5.6)

fcrepo-client-admin
batik-swing        (1.6-1         -> 1.7)
javax.mail         (1.4.1         -> 1.4.5)
saaj-api           (1.3           -> 1.3.4)

fcrepo-installer
mysql              (5.1.6         -> 5.1.20)
postgresql         (8.3-603.jdbc3 -> 9.1-901-1.jdbc4)

fcrepo-server
commons-fileupload (1.2.1         -> 1.2.2)
commons-io         (1.4           -> 2.3)
google-collections (1.0-rc2       -> 1.0)
jaxen              (1.1.1         -> 1.1.3)
jettison           (1.0.1         -> 1.3.1)
mptstore           (0.9.4         -> 0.9.5)
rome               (0.9           -> 1.0)
xstream            (3.7           -> 3.11.1)

https://jira.duraspace.org/browse/FCREPO-1095

--- a/fcrepo-client/fcrepo-client-admin/pom.xml
+++ b/fcrepo-client/fcrepo-client-admin/pom.xml
@@ -49,7 +49,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.5</version>
         <executions>
           <execution>
             <id>add-wsdl-source</id>
@@ -113,7 +112,7 @@
     <dependency>
       <groupId>batik</groupId>
       <artifactId>batik-swing</artifactId>
-      <version>1.6-1</version>
+      <version>1.7</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -122,7 +121,6 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>commons-discovery</groupId>
@@ -155,7 +153,7 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
-      <version>1.4.1</version>
+      <version>1.4.5</version>
     </dependency>
     <dependency>
       <groupId>javax.xml</groupId>
@@ -165,18 +163,11 @@
     <dependency>
       <groupId>javax.xml.soap</groupId>
       <artifactId>saaj-api</artifactId>
-      <version>1.3</version>
+      <version>1.3.4</version>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-bundle</artifactId>
-      <version>${cxf.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
@@ -195,7 +186,6 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>openrdf-sesame-onejar</artifactId>
-      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
@@ -203,10 +193,8 @@
       <classifier>melcoe</classifier>
     </dependency>
     <dependency>
-      <groupId>org.fcrepo</groupId>
+      <groupId>org.trippi</groupId>
       <artifactId>trippi-core</artifactId>
-      <version>1.5.4</version>
-      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
