--- a/fcrepo-client/pom.xml
+++ b/fcrepo-client/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -14,11 +15,8 @@
 
   <dependencies>
   	<dependency>
-  		<groupId>org.fcrepo</groupId>
+  		<groupId>org.trippi</groupId>
   		<artifactId>trippi-core</artifactId>
-  		<version>1.5.4</version>
-  		<type>pom</type>
-  		<scope>compile</scope>
   	</dependency>
   </dependencies>
   <modules>
