--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -14,15 +14,13 @@
   <name>Fedora Server Library</name>
 
   <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>commons-codec</groupId>
-  			<artifactId>commons-codec</artifactId>
-  			<version>1.5</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  	</dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>mptstore</artifactId>
+        <version>0.9.5</version>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
   <properties>
     <demo.src.dir>${basedir}/src/main/resources/demo</demo.src.dir>
@@ -59,9 +57,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.1.1</version>
         <executions>
-
           <execution>
             <id>demo-convert-mets</id>
             <phase>generate-test-resources</phase>
@@ -242,7 +238,7 @@
               <archive>
                 <manifest>
                   <mainClass>org.fcrepo.server.journal.readerwriter.multicast.rmi.RmiJournalReceiver
-                                    </mainClass>
+                  </mainClass>
                 </manifest>
               </archive>
 
@@ -298,7 +294,7 @@
             <configuration>
               <descriptors>
                 <descriptor>${basedir}/src/main/resources/assemblies/rmi-journal-recv-jar.xml
-                                </descriptor>
+                </descriptor>
               </descriptors>
 
               <archive>
@@ -324,7 +320,7 @@
             <configuration>
               <descriptors>
                 <descriptor>${basedir}/src/main/resources/assemblies/rmi-journal-recv-zip.xml
-                                </descriptor>
+                </descriptor>
               </descriptors>
             </configuration>
           </execution>
@@ -347,7 +343,7 @@
     <dependency>
       <groupId>com.google.collections</groupId>
       <artifactId>google-collections</artifactId>
-      <version>1.0-rc2</version>
+      <version>1.0</version>
     </dependency>
 
     <dependency>
@@ -402,13 +398,13 @@
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.2</version>
     </dependency>
 
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.4</version>
+      <version>2.3</version>
     </dependency>
 
     <dependency>
@@ -487,11 +483,19 @@
     <dependency>
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.3</version>
       <exclusions>
         <exclusion>
           <groupId>xom</groupId>
           <artifactId>xom</artifactId>
+        </exclusion>
+        <exclusion>
+          <artifactId>maven-cobertura-plugin</artifactId>
+          <groupId>maven-plugins</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>maven-findbugs-plugin</artifactId>
+          <groupId>maven-plugins</groupId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -535,13 +539,13 @@
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
-      <version>1.3.1</version>
+      <version>1.4.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.xbean</groupId>
       <artifactId>xbean-spring</artifactId>
-      <version>3.7</version>
+      <version>3.11.1</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -573,7 +577,7 @@
     <dependency>
       <groupId>org.codehaus.jettison</groupId>
       <artifactId>jettison</artifactId>
-      <version>1.0.1</version>
+      <version>1.3.1</version>
     </dependency>
 
     <dependency>
@@ -648,17 +652,6 @@
       <artifactId>spring-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-bundle</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
       <groupId>com.sun.xml.ws</groupId>
       <artifactId>jaxws-rt</artifactId>
       <version>2.1.4</version>
@@ -674,7 +667,6 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>mptstore</artifactId>
-      <version>0.9.4</version>
     </dependency>
 
     <!-- This is needed only to trigger the rmi-journal-rcv.jar assembly. -->
@@ -697,17 +689,17 @@
     </dependency>
 
     <dependency>
-      <groupId>org.fcrepo</groupId>
+      <groupId>org.trippi</groupId>
       <artifactId>trippi-core</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.fcrepo</groupId>
+      <groupId>org.trippi</groupId>
       <artifactId>trippi-mptstore</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.fcrepo</groupId>
+      <groupId>org.trippi</groupId>
       <artifactId>trippi-mulgara</artifactId>
     </dependency>
 
@@ -747,7 +739,7 @@
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome</artifactId>
-      <version>0.9</version>
+      <version>1.0</version>
     </dependency>
 
     <dependency>
