--- a/pom.xml
+++ b/pom.xml
@@ -122,15 +122,15 @@
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>
     <timestamp>${maven.build.timestamp}</timestamp>
     <abdera.version>1.1.2</abdera.version>
-    <activemq.version>5.5.0</activemq.version>
+    <activemq.version>5.6.0</activemq.version>
     <akubra.version>0.4.0</akubra.version>
     <axiom.version>1.2.10</axiom.version>
-    <cxf.version>2.4.0</cxf.version>
-    <derby.version>10.7.1.1</derby.version>
+    <cxf.version>2.6.1</cxf.version>
+    <derby.version>10.8.2.2</derby.version>
     <jersey.version>1.8</jersey.version>
-    <slf4j.version>1.5.11</slf4j.version>
+    <slf4j.version>1.6.6</slf4j.version>
     <spring.version>3.0.7.RELEASE</spring.version>
-    <trippi.version>1.5.5</trippi.version>
+    <trippi.version>1.5.6</trippi.version>
   </properties>
 
   <dependencyManagement>
@@ -252,11 +252,11 @@
         </exclusions>
       </dependency>
 
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>openrdf-sesame-onejar</artifactId>
-      <version>2.2.1</version>
-    </dependency>
+      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>openrdf-sesame-onejar</artifactId>
+        <version>2.2.1</version>
+      </dependency>
 
       <dependency>
         <groupId>jotm</groupId>
@@ -273,7 +273,7 @@
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>1.6</version>
+        <version>1.8.3</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -292,17 +292,17 @@
           </exclusion>
         </exclusions>
       </dependency>
-	    <dependency>
-	      <groupId>commons-codec</groupId>
-	      <artifactId>commons-codec</artifactId>
-	      <version>1.5</version>
-	        <exclusions>
-	          <exclusion>
-	            <groupId>commons-logging</groupId>
-	            <artifactId>commons-logging</artifactId>
-	          </exclusion>
-	        </exclusions>
-	    </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.6</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
       <dependency>
         <groupId>commons-discovery</groupId>
         <artifactId>commons-discovery</artifactId>
@@ -317,10 +317,10 @@
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.5.8</version>
+        <version>1.9.7</version>
       </dependency>
       <dependency>
-        <groupId>org.fcrepo</groupId>
+        <groupId>org.trippi</groupId>
         <artifactId>trippi-core</artifactId>
         <version>${trippi.version}</version>
         <exclusions>
@@ -331,7 +331,7 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>org.fcrepo</groupId>
+        <groupId>org.trippi</groupId>
         <artifactId>trippi-mptstore</artifactId>
         <version>${trippi.version}</version>
         <exclusions>
@@ -341,7 +341,7 @@
           </exclusion>
         </exclusions>
       </dependency>      <dependency>
-        <groupId>org.fcrepo</groupId>
+        <groupId>org.trippi</groupId>
         <artifactId>trippi-mulgara</artifactId>
         <version>${trippi.version}</version>
         <exclusions>
@@ -350,7 +350,8 @@
             <artifactId>log4j</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>      <dependency>
+      </dependency>
+      <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>persistence-api</artifactId>
         <version>1.0.2</version>
@@ -386,7 +387,7 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>0.9.18</version>
+        <version>1.0.6</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -481,7 +482,7 @@
           </exclusion>
         </exclusions>
       </dependency>
-      
+
     </dependencies>
   </dependencyManagement>
 
@@ -607,8 +608,8 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!--This plugin's configuration is used to store Eclipse 
-                m2e settings only. It has no influence on the Maven build itself. -->
+        <!--This plugin's configuration is used to store Eclipse m2e settings 
+          only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -643,18 +644,18 @@
                   </action>
                 </pluginExecution>
                 <pluginExecution>
-				  <pluginExecutionFilter>
-				    <groupId>org.apache.maven.plugins</groupId>
-				    <artifactId>maven-clean-plugin</artifactId>
-				    <versionRange>[2.4.1,)</versionRange>
-				    <goals>
-					  <goal>clean</goal>
-				    </goals>
-				  </pluginExecutionFilter>
-				  <action>
-					<ignore />
-				  </action>
-			    </pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <versionRange>[2.4.1,)</versionRange>
+                    <goals>
+                      <goal>clean</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore />
+                  </action>
+                </pluginExecution>
                 <pluginExecution>
                   <pluginExecutionFilter>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -733,6 +734,11 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>1.0</version>
         </plugin>
@@ -779,7 +785,16 @@
     </testResources>
 
     <plugins>
-
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>1.3.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.4</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
@@ -884,11 +899,9 @@
             <artifactId>maven-assembly-plugin</artifactId>
             <dependencies>
               <dependency>
-                <!--
-                  NOTE: The fix for PLXUTILS-120 is crucial for the
-                  assembly descriptor regex, therefore we have to insist
-                  on plexus utils >= 2.0.1 for the time being
-                -->
+                <!-- NOTE: The fix for PLXUTILS-120 is crucial for the assembly 
+                  descriptor regex, therefore we have to insist on plexus utils >= 2.0.1 for 
+                  the time being -->
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-utils</artifactId>
                 <version>2.0.1</version>
@@ -1019,7 +1032,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.5</version>
+      <version>4.10</version>
       <!-- <scope>test</scope> -->
     </dependency>
 
