--- a/fcrepo-server/src/main/resources/properties/resources/install.properties
+++ b/fcrepo-server/src/main/resources/properties/resources/install.properties
@@ -6,13 +6,13 @@
 install.tomcat                  = apache-tomcat-6.0.29.zip
 install.tomcat.basename         = apache-tomcat-6.0.29
 
-install.jdbc.mysql              = mysql-connector-java-5.1.6.jar
-install.jdbc.derby              = derby-10.5.3.0_1.jar
-install.jdbc.derbynetworkclient = derbyclient-10.5.3.0_1.jar
-install.jdbc.postgresql         = postgresql-8.3-603.jdbc3.jar
+install.jdbc.mysql              = mysql-connector-java-5.1.20.jar
+install.jdbc.derby              = derby-10.8.2.2.jar
+install.jdbc.derbynetworkclient = derbyclient-10.8.2.2.jar
+install.jdbc.postgresql         = postgresql-9.1-901-1.jdbc4.jar
 
 # used by the org.fcrepo.utilities.install.Installer to determine if these jars
 # should be removed from fedora.war
-install.commons.collections     = commons-collections-3.1.jar
-install.commons.dbcp            = commons-dbcp-1.2.1.jar
-install.commons.pool            = commons-pool-1.2.jar
+install.commons.collections     = commons-collections-3.2.1.jar
+install.commons.dbcp            = commons-dbcp-1.2.2.jar
+install.commons.pool            = commons-pool-1.3.jar
