--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>3.2.1</version>
+      </dependency>
+      <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
         <version>3.1</version>
@@ -340,7 +345,8 @@
             <artifactId>log4j</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>      <dependency>
+      </dependency>
+      <dependency>
         <groupId>org.trippi</groupId>
         <artifactId>trippi-mulgara</artifactId>
         <version>${trippi.version}</version>
